Dockerfile Java 21 + Tomcat 11